@@ -423,7 +423,7 @@ AC_DEFUN([AX_LIBTOOLS],
 
   AC_MSG_CHECKING([for prvparser-config])
   if test ! -f ${LibToolsDir}/bin/prvparser-config ; then
-    HaveLibtools = "no"
+    HaveLibtools="no"
     AC_MSG_RESULT([no])
   else
     AC_MSG_RESULT([yes])
