@@ -3,6 +3,14 @@
 
 #include "spectral-api.h"
 
-void Reconstruct(char *input_trace, int num_detected_periods, Period_t **detected_periods);
+#if defined(__cplusplus)
+extern "C" {
+#endif
+
+int Reconstruct(char *input_trace, int num_detected_periods, Period_t **detected_periods);
+
+#if defined(__cplusplus)
+}
+#endif
 
 #endif /* __RECONSTRUCT_TRACE_H__ */
